--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link href="style.css" rel="stylesheet">
 </head>
 
+<body>
+
+    <header>
+        <h1>About Me</h1>
+    </header>
+
+
+</body>
+
 
 
 
