--- a/index.html
+++ b/index.html
@@ -5,20 +5,55 @@
 <head>
     <meta charset="UTF-8">
     <title>About Me</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
+    <div class="header">
+        <header>
+            <div id="my-name">
+                <h1>Julio Martinez</h1>
+            </div>
+            <div class="my-links">
+                <nav>
+                    <a href="...">About</a> 
+                    <a href="...">Portfolio</a> 
+                    <a href="...">Contact</a>
+                </nav>
+            </div>
+        </header>
 
-    <header>
-        <h1>About Me</h1>
-    </header>
+        <div class="container">
 
+            <div id="main-content">
+
+                <h2>About Me</h2>
+
+
+
+                <img src="C:\Users\Julio\Desktop\My Stuff\Photos\Misc\img_0239.jpg" width="150" height="150"
+                    style="transform:rotate(90deg)" id="my-image" />
+
+
+                <p>I have always been the type of person that does not easily fall to conformity. Indeed, if there was a
+                    motto for which I could live by is that, change is important in my life. </p>
+
+                <p>In trying to live by this motto, at times I have found myself in some very compromising situations.
+                    At the same time, however; my constant urge to seek change has also led me to some wonderful
+                    experiences. </p>
+
+                <p>As I embark on this new adventure of my life that is coding, I hope to enter a world that can provide
+                    change for me on a constant basis. Indeed, I am now beginning to realize that this was the correct
+                    path for me to take. It is now up to me how far I want to go.</p>
+
+            </div>
+        </div>
+    </div>
+
+    <footer id="my-footer">
+        <h6>Copyright©</h6>
+    </footer>
 
 </body>
-
-
-
-
 
 </html>
