--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>About Me</title>
+    <title>JM Basic Portfolio</title>
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="header">
+    <div class="part-one">
         <header>
             <div id="my-name">
                 <h1>Julio Martinez</h1>
             </div>
+        </header>
             <div class="my-links">
                 <nav>
-                    <a href="...">About</a> 
-                    <a href="...">Portfolio</a> 
+                    <a href="...">About</a>
+                    <a href="...">Portfolio</a>
                     <a href="...">Contact</a>
                 </nav>
             </div>
-        </header>
+        
+    </div>
 
         <div class="container">
 
@@ -31,8 +33,8 @@
 
 
 
-                <img src="C:\Users\Julio\Desktop\My Stuff\Photos\Misc\img_0239.jpg" width="150" height="150"
-                    style="transform:rotate(90deg)" id="my-image" />
+                <img src="C:\Users\Julio\Desktop\My Stuff\Photos\Misc\img_0239.jpg" width="150" height="120"
+                    style="transform:rotate(90deg)" id="my-image"/>
 
 
                 <p>I have always been the type of person that does not easily fall to conformity. Indeed, if there was a
@@ -47,8 +49,9 @@
                     path for me to take. It is now up to me how far I want to go.</p>
 
             </div>
-        </div>
+        
     </div>
+</div>
 
     <footer id="my-footer">
         <h6>Copyright©</h6>
