created contact page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="part-one">
+    <div class="my-header">
         <header>
             <div id="my-name">
                 <h1>Julio Martinez</h1>
