changed page title

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>JM Basic Portfolio</title>
+    <title>Contact</title>
     <link href="assets/css/contact-style.css" rel="stylesheet">
 </head>
 
