--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>JM Basic Portfolio</title>
+    <title>About</title>
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
