--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,13 @@
         </header>
             <div class="my-links">
                 <nav>
-                    <a href="...">About</a>
+                    <a href="file:///C:/Users/Julio/code/Homework/week1/Basic-Portfolio/index.html">About</a>
                     <a href="...">Portfolio</a>
-                    <a href="...">Contact</a>
+                    <a href="file:///C:/Users/Julio/code/Homework/week1/Basic-Portfolio/contact.html">Contact</a>
                 </nav>
             </div>
+
+            <div class=“clear”></div>
     </div>
 
     <div class="container">
@@ -49,7 +51,7 @@
         </div>
         
     </div>
-</div>
+
 
     <footer id="my-footer">
         <h6>Copyright©</h6>
