--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </header>
             <div class="my-links">
                 <nav>
-                    <a href="...">About</a>
+                    <a href="file:///C:/Users/Julio/code/Homework/week1/Basic-Portfolio/index.html">About</a>
                     <a href="...">Portfolio</a>
-                    <a href="...">Contact</a>
+                    <a href="file:///C:/Users/Julio/code/Homework/week1/Basic-Portfolio/contact.html">Contact</a>
                 </nav>
             </div>
         
