changed reltive paths

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
         </header>
         <div class="my-links">
             <nav>
-                <a href="file:///C:/Users/Julio/code/Homework/week1/Basic-Portfolio/index.html">About</a>
-                <a href="file:///C:/Users/Julio/code/Homework/week1/Basic-Portfolio/portfolio.html">Portfolio</a>
-                <a href="file:///C:/Users/Julio/code/Homework/week1/Basic-Portfolio/contact.html">Contact</a>
+                <a href="./index.html">About</a>
+                <a href="./portfolio.html">Portfolio</a>
+                <a href="./contact.html">Contact</a>
             </nav>
         </div>
 
