--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </header>
             <div class="my-links">
                 <nav>
-                    <a href="file:///C:/Users/Julio/code/Homework/week1/Basic-Portfolio/index.html">About</a>
-                    <a href="file:///C:/Users/Julio/code/Homework/week1/Basic-Portfolio/portfolio.html">Portfolio</a>
-                    <a href="file:///C:/Users/Julio/code/Homework/week1/Basic-Portfolio/contact.html">Contact</a>
+                    <a href="./index.html">About</a>
+                    <a href="./portfolio.html">Portfolio</a>
+                    <a href="./contact.html">Contact</a>
                 </nav>
             </div>
         
@@ -33,7 +33,7 @@
 
 
 
-                <img src="C:\Users\Julio\code\Homework\week1\Basic-Portfolio\assets\images\img_0239.jpg" alt="My Photo" width="150" height="120"
+                <img src="./assets/images/IMG_0239.JPG" alt="My Photo" width="150" height="120"
                     style="transform:rotate(90deg)" id="my-image"/>
 
 
