--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 
-                <img src="./assets/images/IMG_0239.JPG" alt="My Photo" width="150" height="120"
+                <img src="assets/images/IMG_0239.JPG" alt="My Photo" width="150" height="120"
                     style="transform:rotate(90deg)" id="my-image"/>
 
 
